--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Hello AngularJS</title>
   </head>
   <body>
-    <h1>Hello AngularJS Hello Jello</h1>
+    <h1>Hello AngularJS Hello Jello Feeling Scripty</h1>
   </body>
 </html>
